<?xml version="1.0" encoding="UTF-8"?>
<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>com.viglet.turing</groupId>
        <artifactId>turing</artifactId>
        <version>${revision}</version>
        <relativePath>../pom.xml</relativePath>
    </parent>
    <artifactId>turing-jdbc</artifactId>
    <packaging>jar</packaging>
    <name>Turing JDBC</name>
    <description>Turing JDBC</description>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <sonar.organization>viglet-turing</sonar.organization>
        <sonar.host.url>https://sonarcloud.io</sonar.host.url>
        <sonar.projectKey>turing-jdbc</sonar.projectKey>
    </properties>
    <dependencies>
        <dependency>
            <groupId>com.beust</groupId>
            <artifactId>jcommander</artifactId>
            <version>1.82</version>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
            <version>2.16.2</version>
        </dependency>
        <dependency>
            <groupId>org.json</groupId>
            <artifactId>json</artifactId>
        </dependency>
        <dependency>
            <groupId>org.apache.httpcomponents.client5</groupId>
            <artifactId>httpclient5</artifactId>
        </dependency>
        <dependency>
            <groupId>commons-io</groupId>
            <artifactId>commons-io</artifactId>
        </dependency>
        <dependency>
            <groupId>com.viglet.turing</groupId>
            <artifactId>turing-java-sdk</artifactId>
            <version>${project.version}</version>
            <exclusions>
                <exclusion>
                    <artifactId>*</artifactId>
                    <groupId>xml-apis</groupId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>com.viglet.turing</groupId>
            <artifactId>fs-commons</artifactId>
            <version>${project.version}</version>
            <exclusions>
                <exclusion>
                    <groupId>org.slf4j</groupId>
                    <artifactId>slf4j-api</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>org.springframework</groupId>
                    <artifactId>spring-jcl</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>com.oracle.ojdbc</groupId>
            <artifactId>ojdbc8</artifactId>
            <version>19.3.0.0</version>
        </dependency>
        <dependency>
            <groupId>org.mariadb.jdbc</groupId>
            <artifactId>mariadb-java-client</artifactId>
            <version>3.4.0</version>
            <exclusions>
                <exclusion>
                    <groupId>org.slf4j</groupId>
                    <artifactId>jcl-over-slf4j</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>org.slf4j</groupId>
                    <artifactId>slf4j-api</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>org.postgresql</groupId>
            <artifactId>postgresql</artifactId>
            <version>42.7.3</version>
        </dependency>
        <dependency>
            <groupId>org.jsoup</groupId>
            <artifactId>jsoup</artifactId>
            <version>1.17.2</version>
        </dependency>
    </dependencies>
    <build>
        <plugins>
            <!-- Maven Compiler Plugin -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.13.0</version>
                <configuration>
                    <source>21</source>
                    <target>21</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.6.0</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>
                            <filters>
                                <filter>
                                    <artifact>*:*</artifact>
                                    <excludes>
                                        <exclude>META-INF/LICENSE</exclude>
                                        <exclude>META-INF/LICENSE.*</exclude>
                                        <exclude>META-INF/license.*</exclude>
                                        <exclude>META-INF/DEPENDENCIES</exclude>
                                        <exclude>META-INF/NOTICE</exclude>
                                        <exclude>META-INF/NOTICE.*</exclude>
                                        <exclude>META-INF/notice.*</exclude>
                                        <exclude>META-INF/MANIFEST.MF</exclude>
                                        <exclude>module-info.class</exclude>
                                        <exclude>**/9/module-info.class</exclude>
                                        <exclude>META-INF/AL2.0</exclude>
                                        <exclude>META-INF/LGPL2.1</exclude>
                                        <exclude>META-INF/services/org.apache.tika.parser.Parser</exclude>
                                        <exclude>META-INF/services/java.sql.Driver</exclude>
                                        <exclude>META-INF/BC2048KE.DSA</exclude>
                                        <exclude>META-INF/BC2048KE.SF</exclude>
                                    </excludes>
                                </filter>
                                <filter>
                                    <artifact>org.apache.logging.log4j:log4j-core</artifact>
                                    <excludes>
                                        <exclude>META-INF/services/javax.annotation.processing.Processor</exclude>
                                    </excludes>
                                </filter>
                                <filter>
                                    <artifact>*:poi-scratchpad</artifact>
                                    <excludes>
                                        <exclude>META-INF/services/org.apache.poi.sl.usermodel.SlideShowProvider</exclude>
                                        <exclude>META-INF/services/org.apache.poi.extractor.ExtractorProvider</exclude>
                                        <exclude>META-INF/services/org.apache.poi.sl.draw.ImageRenderer</exclude>
                                    </excludes>
                                </filter>
                                <filter>
                                    <artifact>*:jai-imageio-*</artifact>
                                    <excludes>
                                        <exclude>META-INF/services/javax.imageio.spi.ImageReaderSpi</exclude>
                                    </excludes>
                                </filter>
                                <filter>
                                    <artifact>*:jai-imageio-jpeg2000</artifact>
                                    <excludes>
                                        <exclude>META-INF/services/javax.imageio.spi.ImageWriterSpi</exclude>
                                    </excludes>
                                </filter>
                                <filter>
                                    <artifact>*:spring-web</artifact>
                                    <excludes>
                                        <exclude>META-INF/services/reactor.blockhound.integration.BlockHoundIntegration</exclude>
                                        <exclude>META-INF/spring/aot.factories</exclude>
                                    </excludes>
                                </filter>
                                <filter>
                                    <artifact>*:spring-beans</artifact>
                                    <excludes>
                                        <exclude>META-INF/spring/aot.factories</exclude>
                                    </excludes>
                                </filter>
                                <filter>
                                    <artifact>*:tika-parser-zip-commons</artifact>
                                    <excludes>
                                        <exclude>META-INF/services/org.apache.tika.detect.*</exclude>
                                    </excludes>
                                </filter>
                                <filter>
                                    <artifact>*:tika-parser-text-module</artifact>
                                    <excludes>
                                        <exclude>META-INF/services/org.apache.tika.detect.EncodingDetector</exclude>
                                    </excludes>
                                </filter>
                                <filter>
                                    <artifact>*:poi-ooxml</artifact>
                                    <excludes>
                                        <exclude>META-INF/services/org.apache.poi.ss.usermodel.WorkbookProvider</exclude>
                                        <exclude>META-INF/services/org.apache.poi.extractor.ExtractorProvider</exclude>
                                        <exclude>META-INF/services/org.apache.poi.sl.draw.ImageRenderer</exclude>
                                    </excludes>
                                </filter>
                            </filters>
                            <finalName>turing-jdbc</finalName>
                            <shadedArtifactAttached>true</shadedArtifactAttached>
                            <shadedClassifierName>indexer</shadedClassifierName>
                            <transformers>
                                <transformer
                                        implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                    <mainClass>com.viglet.turing.tool.jdbc.TurJDBCImportTool</mainClass>
                                </transformer>
                            </transformers>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>
